@@ -65,9 +65,18 @@
       formal question
       <input id="fq" name="formal-question" type="text" size="80"/>
     </label>
-     <label>
+    <label>
       textarea
       <textarea id="text" name="remarks" rows=3 cols=80></textarea>
+    </label>
+    <label>
+      dropdown
+      <select id="dropdown" name="options">
+        <option value="o1">foo one</option>
+        <option value="o2">bar two</option>
+        <option value="o3">bar three</option>
+        <option value="o4">bar four</option>
+      </select>
     </label>
     <label>
       not enabled
